fix width and alignment of text on view flow page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -349,3 +349,10 @@ label[for='puppies'] {
   display: none;
   margin-bottom: 25px;
 }
+
+#text {
+  text-align: left;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
